Updated POM files of ecuc value accessor plugins https://www.artop.org/bugs/show_bug.cgi?id=2016